--- a/Systembolaget/Systembolaget.csproj
+++ b/Systembolaget/Systembolaget.csproj
@@ -101,9 +101,12 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resources\bkgrndTabletop.png" />
+    <Resource Include="Resources\combinedTabletop.png" />
     <Content Include="Resources\icon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Resources\singleTable.png" />
     <Content Include="Systembolaget.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
