everything is finally working.

--- a/Systembolaget/Systembolaget.csproj
+++ b/Systembolaget/Systembolaget.csproj
@@ -115,12 +115,15 @@
     <Resource Include="Resources\combinedTabletop.png" />
     <None Include="Resources\combineInfo.png" />
     <Resource Include="Resources\combineInfo.png" />
+    <Resource Include="Resources\BigBkgrndTabletop.png" />
+    <Resource Include="Resources\combineInfo2.png" />
     <Content Include="Resources\icon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Resource Include="Resources\singleTable.png" />
     <None Include="Resources\productInfo.png" />
     <Resource Include="Resources\productInfo.png" />
+    <Resource Include="Resources\productInfo2.png" />
     <Content Include="Systembolaget.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
